# Sodoku

./: .gitignore  CMakeLists.txt  Game.c  Game.h  GameBoard.c  GameBoard.h  MainAux.c  MainAux.h  Parser.c  Parser.h  README.md  Solver.c  Solver.h  TO DO.rtf  defs.h  gurobiSolver.c  gurobiSolver.h  main.c  makefile.txt  partners.txt
